--- a/Task6(0)/index.html
+++ b/Task6(0)/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="green"></div>
 		<div class="pink"></div>
-		<div class="blue"></div>
+		<div class="blue"</	div>
 	</div>
 </body>
 </html>
