--- a/Task5/3/index.html
+++ b/Task5/3/index.html
@@ -1,36 +1,19 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>RWD5 task3</title>
-		<link rel="stylesheet" href="style.css">
-	</head>
-	<body>
-		<div role="navigation">
-			<span>
-				<a href="who we are">Product</a> <br>
-				<a href="mail">Mail</a> <br>
-				<a href="contacts">Contacts</a>    <br>
-				<a href="faqs">Faqs</a><br>
-				<a href="Blog">Blog</a>    <br>
-			</span>
-		</div>
-		<hr>
-		<div>
-			<div>
-				<a href="#">Link</a>
-				<p>First</p>
-				<p>Second</p>
-			</div>
-		</div>
-		<hr>
-		<div>
-			<div>
-				<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-				<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-				<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>		
-                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>	
-			</div>
-		</div>
-	</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>web animation</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div class="first">
+            <div class="circle1"></div>
+            <div class="circle2"></div>
+            <div class="circle4"></div>
+            <div class="circle3"></div>
+            <div class="circle5"></div>
+            <div class="circle6"></div>
+        </div>
+    </body>
 </html>
