--- a/Task5/1/index1.html
+++ b/Task5/1/index1.html
@@ -6,7 +6,7 @@
         <title>Task-5-1</title>
     </head>
     <body>
-        <div class="obj">
+        <div class="object">
             <button type="button" class="button"> CHECKOUT </button>
         </div>
     </body>
