--- a/Task5/1/index1.html
+++ b/Task5/1/index1.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style1.css">
         <title>Task-5-1</title>
     </head>
     <body>
