--- a/Task5/2/logo.html
+++ b/Task5/2/logo.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Task-5(Logo)</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style_logo.css">
+    <meta charset="UTF-8">
+    <title>Task 5.2</title>
+    <link rel="stylesheet" href="style_logo.css">
 </head>
 <body>
-	<a href="#" class="icon icon-logo">Company</a>
+    <a href="#" class="icon icon-logo">Company</a>
 </body>
 </html>
