change name of class

--- a/4/index.html
+++ b/4/index.html
@@ -17,7 +17,7 @@
             <div class="row cont">
                 <div class="content col-xs-12 col-sm-12 col-md-12"></div>
             </div>
-            <div class="row info-holder">
+            <div class="row information">
                 <div class="item col-xs-4 col-sm-4 col-md-4"></div>
                 <div class="item col-xs-4 col-sm-4 col-md-4"></div>
                 <div class="lastitem col-xs-4 col-sm-4 col-md-4"></div>
