--- a/4/index.html
+++ b/4/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>RWD Task-4</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <div class="main">
-            <div class="row navigation">
-                <div class="logo col-xs-3 col-sm-3 col-md-3"></div>
-                <div class="nav col-xs-9 col-sm-9 col-md-9"></div>
-            </div>
-            <div class="row cont">
-                <div class="content col-xs-12 col-sm-12 col-md-12"></div>
-            </div>
-            <div class="row information">
-                <div class="item col-xs-4 col-sm-4 col-md-4"></div>
-                <div class="item col-xs-4 col-sm-4 col-md-4"></div>
-                <div class="lastitem col-xs-4 col-sm-4 col-md-4"></div>
-            </div>
-            <div class="row footer-holder">
-                <div class="footer col-xs-12 col-sm-12 col-md-12"></div>
-            </div>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Task 4</title>
+</head>
+
+<body>
+    <div class="container-fluid">
+        <div class="row first">
+            <div class="col-xs-3 col-sm-3 col-lg-3 logo"> </div>
+            <div class="col-xs-9 col-sm-9 col-lg-9 title"> </div>
         </div>
-    </body>
+        <div class="row second">
+            <div class="col-xs-12 col-sm-12 col-lg-12 main"></div>
+        </div>
+        <div class="row third">
+            <div class="col-xs-12 col-sm-4 col-lg-4 info"></div>
+            <div class="col-xs-12 col-sm-4 col-lg-4 info"></div>
+            <div class="col-xs-12 col-sm-4 col-lg-4 infolast"></div>
+        </div>
+        <div class="row fourth">
+            <div class="col-xs-0 col-sm-12 col-lg-0 footer"></div>
+        </div>
+    </div>
+</body>
+
 </html>
